* Mouse-over variable inspection.
* Symbol Viewer.

Optimization:
* Cache simulation data for circuits with discrete set of inputs (and no
  reactive components).
* Speed up calculation of diode operating point.
* Optimized mixed logic and non-logic simulation.
* Optimized recording of boolean data from logic probes.

Interface:
* Translations into French, Spanish and Italian.
* Replaced KMDI with KateMDI (toolviews remember sizes, lots of other
  improvements).
* Modularised GUI - menus and toolbars are hidden / shown as appropriate for
  the document being edited.
* Toolbar item editor is now squashable.
* Lots of icon improvements.

Polishing:
* Removed flicker when resizing the work area.
* Remember cursor position in text documents on save / restore.
* Removed flicker when joining / splitting connectors.
* Save undo / redo state after editing data.
* Remember connection routing selection.
* Try and retain upwards position of text when rotating / reflecting components.
* Editing of real numbers now always uses three significant figures.
* Give LEDs a nice selection of predefined LED colours.

Miscellaneous Features:
* PIC program uploading (via the use of external programs).
* Allow changing of the z-ordering of items.
* Added support for gpsim-0.21.11 and gpsim-0.21.12.

Changes between Qt3 and Qt4 port (to be completed)
====
- ktechlab compiles and runs with Qt4 and kdelibs4
- fixed crash on item drag to circuit, if the item is held less than ~1s over the circuit (if it is, then dragging appears to work)
    - caused by timing condition, related to dragging explicit event consumption in the application
- added flexible logging system
- fixed removing of subcircuits from component list
- removed: delete subcircuit with the delete key
    - can be readded as a feature
- fix to allow changing the name of an external connector
- fixed graphical glitches with external components; caused by a painter used for taking font metrics