@@ -66,3 +66,4 @@ Changes between Qt3 and Qt4 port (to be completed)
     - can be readded as a feature
 - fix to allow changing the name of an external connector
 - fixed graphical glitches with external components; caused by a painter used for taking font metrics
+- fixed use-after free crash in ECSRFlipFlop::inStateChanged(), when SR flipflops are added and removed subsequenctly to a circuit
